# rust-research

RustResearch-main/: README.md
RustResearch-main/Queries/AWS Credentials Leak/src/: main.rs
RustResearch-main/Queries/Cookie Overly Broad Path/src/: main.rs
RustResearch-main/Queries/DangerousFileExtension/: Cargo.toml
RustResearch-main/Queries/DangerousFileExtension/src/: main.rs
RustResearch-main/Queries/Divide by zero/src/: main.rs
RustResearch-main/Queries/DynamoDB NoSQL Injection/: Cargo.toml
RustResearch-main/Queries/DynamoDB NoSQL Injection/src/: main.rs
RustResearch-main/Queries/Empty Password in Connection String/: .env  Cargo.toml
RustResearch-main/Queries/Empty Password in Connection String/src/: main.rs
RustResearch-main/Queries/Execessive_Data_Exposure/: Cargo.toml
RustResearch-main/Queries/External_Control_of_System_or_Config_Setting/: .env  Cargo.toml
RustResearch-main/Queries/Hardcoded AWS Credentials/: Cargo.toml
RustResearch-main/Queries/Hardcoded Salt/: hardcoded.rs
RustResearch-main/Queries/Heap Inspection/: Cargo.toml
RustResearch-main/Queries/Improper Locking/: Cargo.toml
RustResearch-main/Queries/Improper_Resource_Shutdown_or_Release/: file.txt
RustResearch-main/Queries/Improper_Transaction_Handling/: Cargo.toml
RustResearch-main/Queries/Incorrect_Permission_Assignment_For_Critical_Resources/: test_permissions.rs
RustResearch-main/Queries/Insecure Value of the SameSite Cookie Attribute/: Cargo.toml
RustResearch-main/Queries/Insufficiently Secure Password Storage Algorithm Parameters/: Cargo.toml
RustResearch-main/Queries/JWT Information Exposure/: Cargo.toml
RustResearch-main/Queries/LDAP_Injection/: Cargo.toml  Rocket.toml
RustResearch-main/Queries/Length Extension Attack/: Cargo.toml
RustResearch-main/Queries/Length Extension Attack/src/: main.rs
RustResearch-main/Queries/Log Forging/: Cargo.toml
RustResearch-main/Queries/Misconfigured_X_Content_Type_Options/: Cargo.toml
RustResearch-main/Queries/Misconfigured_X_Content_Type_Options/src/: Misconfigured_X_Content_Type_Options.rs  main.rs
RustResearch-main/Queries/Missing Framing Policy/: file-body.txt
RustResearch-main/Queries/Missing HSTS/: Rocket.toml  key.pem
RustResearch-main/Queries/Missing HSTS TLS Disabled/: Cargo.toml  cert.pem
RustResearch-main/Queries/Missing Password Field Masking/: Cargo.toml
RustResearch-main/Queries/NULL Pointer Dereference/: Cargo.toml
RustResearch-main/Queries/Numeric Overflow/: Cargo.toml
RustResearch-main/Queries/Observable Timing Discrepancy/: Cargo.toml
RustResearch-main/Queries/Off_By_One/: Cargo.toml
RustResearch-main/Queries/Open Redirect New/: Cargo.toml
RustResearch-main/Queries/Open Redirect New/src/: main.rs
RustResearch-main/Queries/PCI Data Exposure in Logs/: Cargo.toml
RustResearch-main/Queries/PCI Data Exposure in URL/: Cargo.toml
RustResearch-main/Queries/Path Traversal/: handler.rs  main.rs
RustResearch-main/Queries/Plaintext Password Storage/: Cargo.toml
RustResearch-main/Queries/Plaintext Password Storage/src/: main.rs  models.rs
RustResearch-main/Queries/Privacy Violation/: Cargo.toml
RustResearch-main/Queries/Privacy Violation In Files/: Cargo.toml
RustResearch-main/Queries/Privacy Violation in Error Messages/: Cargo.toml
RustResearch-main/Queries/Privacy Violation in Error Messages/src/: main.rs
RustResearch-main/Queries/Reliance_on_Reverse_DNS_Lookups_in_a_Decision/: Cargo.toml
RustResearch-main/Queries/Rocket XSS/rocket-xss/: Cargo.toml  db.sqlite
RustResearch-main/Queries/Rocket XSS/rocket-xss/src/: main.rs
RustResearch-main/Queries/Rocket XSS/rocket-xss/templates/: hbs_test.html.hbs  tera_test.html.tera
RustResearch-main/Queries/SQL Injection/: Cargo.toml
RustResearch-main/Queries/SQL Injection/src/: main.rs
RustResearch-main/Queries/Secret Leak In Logs/: Cargo.toml
RustResearch-main/Queries/Sensitive_Information_Exposure_in_Cleartext_Channel/: Cargo.toml
RustResearch-main/Queries/Serializable_Class_Containing_Sensitive_Data/: main.rs
RustResearch-main/Queries/Trust Boundary Violation/: Cargo.toml  Rocket.toml
RustResearch-main/Queries/Type Conversion Error/: Cargo.toml
RustResearch-main/Queries/Uncontrolled Memory Allocation/: Cargo.toml
RustResearch-main/Queries/Unsafe Archive Unpacking/: Cargo.toml
RustResearch-main/Queries/Usage of Temp Dir/: Cargo.toml
RustResearch-main/Queries/Usage of Temp Dir/src/: main.rs
RustResearch-main/Queries/Use of Cryptographically Weak PRNG/: Cargo.toml
RustResearch-main/Queries/Use of Encoding Instead of Encryption/: encoding_encryption.rs
RustResearch-main/Queries/Use of Non Cryptographic Random/: Cargo.toml
RustResearch-main/Queries/Use of Non Cryptographic Random/src/: main.rs
RustResearch-main/Queries/Use of Unsafe Keyword/: Cargo.toml
RustResearch-main/Queries/Use_of_Native_Language/: Cargo.toml
RustResearch-main/Queries/Using Referer Header for Authentication/: Cargo.toml
RustResearch-main/Queries/arbitrary_file_write/: Cargo.toml
RustResearch-main/Queries/deadpool_postgres_cs_injection/: Cargo.toml
RustResearch-main/Queries/deadpool_postgres_password_in_cs/: Rocket.toml
RustResearch-main/Queries/deadpool_postgres_raw_queries/: stored.txt
RustResearch-main/Queries/deadpool_postgres_stored_inputs/: Rocket.toml
RustResearch-main/Queries/deadpool_redis_cs_injection/: Cargo.toml
RustResearch-main/Queries/deadpool_redis_stored_inputs/: Rocket.toml
RustResearch-main/Queries/deadpool_redis_stored_outputs/: Rocket.toml
RustResearch-main/Queries/race_Condition_Cross_Funcionality/: Cargo.toml
RustResearch-main/Queries/resource_injection/: Cargo.toml
RustResearch-main/Queries/unrestricted_file_upload/: Cargo.toml  README.txt
(+128 files in other folders)
