[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0", features = ["tls"]}
tokio = { version = "1.33.0" }
reqwest = { version = "0.11.22", features = ["native-tls"] }
rustls = { version = "0.22.1" }
docopt = "~1.1"
env_logger = "0.10"
log = { version = "0.4.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
rcgen = { version = "0.11.3", features = ["pem"], default-features = false }
rustls-pemfile = "2"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.26"
openssl = "0.10.63"
base64 = "0.21.7"