[package]
name = "plaintext_password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
rand = "0.8.5"
rocket = "0.5.0-rc"
ring = "0.17.6"
data-encoding = "2.3.0"
