[package]
name = "privacy_violation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.0.0"
serde = {version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
ring = "0.17.0"
log = "0.4.14"