[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres" ] }
dotenvy = "0.15"
rand = "0.8.5"
tokio = { version = "1.20.0", features = [ "rt-multi-thread", "macros" ] }