[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-postgres = "0.7.10"
ring = "0.17.8"
[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["deadpool_postgres", "deadpool_redis"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v1",                # Lets you generate random UUIDs
    "v3",                # Lets you generate random UUIDs
    "v4",                # Lets you generate random UUIDs
    "v5",                # Lets you generate random UUIDs
    "v6",                # Lets you generate random UUIDs
    "v7",                # Lets you generate random UUIDs
    "v8",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
