[package]
name = "privacy_violation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.0.0"
serde = {version = "1.0", features = ["derive"] }
ring = "0.17.8"
# import rand
rand = "0.8.4"