[package]
name = "rocket-xss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.1.1"
rocket = { path = "../../core/lib", features = ["json"] }
serde_json = "1.0"

[dependencies.rocket_dyn_templates]
path = "../../contrib/dyn_templates"
features = ["tera", "handlebars"]

[dependencies.rocket_sync_db_pools]
path = "../../contrib/sync_db_pools/lib/"
features = ["diesel_sqlite_pool"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]